# peillute-mirror

./: .gitignore  .source_hash  CSS_ENHANCEMENTS_DOCUMENTATION.md  Cargo.toml  Dockerfile  README.md  UI_UX_IMPROVEMENT_PLAN.md  docker-compose.yml  launch_peillute_instance.sh
assets/: main.css
assets/styling/: main.css
src/: clock.rs  control.rs  db.rs  main copy.rs  main.rs  message.rs  network.rs  state.rs  utils.rs
src/control/: cli.rs  db copy.rs  db.rs  mod.rs  network copy.rs  network.rs
src/data/: clock.rs  message.rs  mod.rs  state.rs
src/views/: actions.rs  home.rs  info.rs  mod.rs  user.rs
static/index/: 6818a5d1.html
