[package]
name = "peillute"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6.1", features = ["router", "fullstack"] }
tokio = { version = "1.44", features = ["full"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.35", features = ["derive"] }
rusqlite = { version = "0.34.0", optional = true }
lazy_static = "1.5.0"
rmp-serde = "1.3.0"
reqwest = "0.12.15"
axum = { version = "0.7.0", optional = true }
dioxus-cli-config = { version = "0.6.1", optional = true }
dioxus-logger = "0.6.2"
tracing = "0.1.41"

[features]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:tokio",
    "dep:rusqlite",
    "dioxus-cli-config",
]
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
